# OOP244-WORKS

./: README.md
MS1/: Date.cpp  Date.h  Menu.cpp  Menu.h  Utils.cpp  Utils.h
Workshop 10/: Book.cpp  Book.h  CMakeLists.txt  Card.cpp  Card.h  Collection.h  Pet.cpp  Pet.h  Write.h  main.cpp  reflect.txt  templateFunctions.h  w10.sln  w10.vcxproj  w10.vcxproj.filters
Workshop 10/x64/Debug/: vc143.idb  w10.exe.recipe  w10.ilk  w10.vcxproj.FileListAbsolute.txt
Workshop 10/x64/Debug/w10.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  w10.lastbuildstate
Workshop 6/: readme.md
Workshop 8/: Account.cpp  Account.h  Allocator.cpp  ChequingAccount.cpp  ChequingAccount.h  SavingsAccount.cpp  SavingsAccount.h  iAccount.h  main.cpp  reflect.txt  w08.vcxproj  w08.vcxproj.filters
milestone3/: Date.cpp  Date.h  Lib.h  Periodicals.txt  Publication.cpp  Streamable.cpp  Streamable.h  Utils.cpp  dateTester.cpp  milestone3.sln  milestone3.vcxproj  milestone3.vcxproj.filters  ms3_tester.cpp
ms4/: Book.cpp  Book.h  BookTester.cpp  CMakeLists.txt  Date.cpp  Date.h  Publication.cpp  Publication.h  Utils.cpp  Utils.h  ms4.sln  ms4.vcxproj  ms4.vcxproj.filters  ms4_tester.cpp
ms4/x64/Debug/: ms4.exe.recipe  ms4.ilk  ms4.vcxproj.FileListAbsolute.txt  vc143.idb
ms4/x64/Debug/ms4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ms4.lastbuildstate
ms5/: Book.cpp  Book.h  Date.cpp  Date.h  Lib.h  LibApp.cpp  LibApp.h  LibAppMain.cpp  LibRecs.txt  (+14 more)
(+157 files in other folders)
